tests/fixtures/invalid/pow_bool_list_str.py
# Cannot call pow() with Bool, List[int], Str
x = pow(True, [1, 2, 3], "hello")
